# flipdot-brose

./: .gitignore  .gitmodules  README.md  sdkconfig
firmware/: .gitignore  CMakeLists.txt  partitions.csv  sdkconfig
firmware/main/: CMakeLists.txt  REST  classes.h  commandinterpreter.cpp  commandinterpreter.h  flipdotdisplay.cpp  flipdotdisplay.h  globals.h  main.cpp  names.h
firmware/main/buffers/: flipdotbuffer.cpp  flipdotbuffer.h  ws2812buffer.cpp  ws2812buffer.h
firmware/main/controllers/: flipdotdisplay.cpp  flipdotdisplay.h  ws2812controller.cpp  ws2812controller.h
firmware/main/drivers/: flipdotdriver.cpp  flipdotdriver.h  ws2812driver.cpp  ws2812driver.h
firmware/main/font/: octafont-regular.h  pixelfont.h
firmware/main/libs/: blue.cpp  blue.h  comx.cpp  comx.h  http_server.cpp  http_server.h  mdns.h  nvs.cpp  nvs.h  tcp_server.cpp  tcp_server.h  wifi.cpp  wifi.h
firmware/main/lowlevel/: flipdotdriver.cpp  flipdotdriver.h  ws2812driver.cpp
firmware/main/util/: bitarray.cpp  bitarray.h  pixelmap.cpp  pixelmap.h  pixelstring.cpp  pixelstring.h  ringbuffer.cpp  ringbuffer.h  util.h
flipui/: commands.py  flipdotdisplay.py  flipdotwidget.py  image2bitarray.py  main.py  requirements.txt  txworker.py  txworker_old.py  util.py
flipui/gfx/: bitarray_utils.py  pixelfont.py  rect.py
flipui/gui/: mainwindow.py  mainwindow.ui  mainwindow_ui.py  settingsdialog.py  settingsdialog.ui  settingsdialog_ui.py
flipui/qutils/: flipdotdisplay.py  qcommand.py  txworker.py
main/: CMakeLists.txt  flipdotdisplay.cpp  flipdotdisplay.h  globals.h  main.cpp  ws2812_control.cpp  ws2812_control.h
main/font/: font-5x7.h  octafont-bold.h  pixelfont.h
main/libs/: blue.cpp  blue.h  comx.h  globals.h  http_server.cpp  http_server.h  nvs.cpp  nvs.h  tcp_server.h  udp_server.cpp  udp_server.h  wifi.cpp  wifi.h
main/lowlevel/: flipdotdriver.cpp  flipdotdriver.h  ws2812driver.cpp  ws2812driver.h
main/util/: bitarray.cpp  bitarray.h  pixelmap.h  util.h
pcb/: .gitignore  drivers.sch  flipdot-brose-cache.lib  flipdot-brose-rescue.kicad_sym  flipdot-brose.kicad_pcb  flipdot-brose.kicad_pcb-bak  flipdot-brose.kicad_prl  flipdot-brose.kicad_pro  flipdot-brose.net  flipdot-brose.pro  flipdot-brose.sch  flipdot-brose.sch-bak  led.sch  led.sch-bak  power_supply.sch-bak  sym-lib-table
pcb/gerber/: flipdot-brose-B_Cu.gbr  (+9 more)
protocol/: tcp_chart.ods
