idf_component_register(
    SRCS
        "main.cpp"
        "flipdotdisplay.cpp"
        "commandinterpreter.cpp"
        "controllers/ws2812controller.cpp"
        "drivers/flipdotdriver.cpp"
        "drivers/ws2812driver.cpp"
        "libs/wifi.cpp"
        "libs/nvs.cpp"
        "libs/http_server.cpp"
        "libs/tcp_server.cpp"
        "libs/comx.cpp"
        "libs/blue.cpp"
        "util/bitarray.cpp"
        "util/pixelmap.cpp"
        "util/pixelstring.cpp"
    INCLUDE_DIRS
        ""
)
