idf_component_register(
    SRCS
        "main.cpp"
        "commandinterpreter.cpp"
        "buffers/ws2812buffer.cpp"
        "controllers/flipdotdisplay.cpp"
        "controllers/ws2812controller.cpp"
        "drivers/flipdotdriver.cpp"
        "drivers/ws2812driver.cpp"
        "libs/wifi.cpp"
        "libs/nvs.cpp"
        "libs/tcp_server.cpp"
        "libs/comx.cpp"
        "libs/blue.cpp"
        "util/bitarray.cpp"
        "util/pixelmap.cpp"
        "util/pixelstring.cpp"
    INCLUDE_DIRS
        ""
)
